--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ Django==3.1.4
 django-crispy-forms==1.10.0
 psycopg2-binary>=2.8
 pandas==1.1.5
-django-rename-app==0.1.2
 django-environ==0.4.5
 google-cloud-storage==1.35.0
 gcsfs==0.7.1
 xlrd==2.0.1
 openpyxl==3.0.5
+gunicorn==20.0.4
