--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==3.1.4
-django-exetensions==3.1.1
+django-extensions==3.1.1
 django-crispy-forms==1.10.0
 django-rename-app==0.1.2
 psycopg2-binary>=2.8
@@ -12,3 +12,4 @@ openpyxl==3.0.5
 gunicorn==20.0.4
 whitenoise==5.2.0
 python-dotenv==0.15.0
+oauth2
