post related prod magento and woocommerce full integration

--- a/.gitignore
+++ b/.gitignore
@@ -141,8 +141,11 @@ service_account_key.json
 .env
 /yaml/
 .shopify-env
-res.json
 .magento-env
+.woocommerce-env
+res.json
+orders.json
+products.json
 
 # Other files
 eNno
