--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==3.1.4
+djangorestframework==3.12.2
+django-cors-headers==3.7.0
 django-extensions==3.1.1
 django-crispy-forms==1.10.0
 django-rename-app==0.1.2
