adds production dockerfile

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -12,4 +12,4 @@ COPY . /code/
 
 EXPOSE 8000
 
-CMD python manage.py runserver 0.0.0.0:8000
+CMD ["gunicorn"  , "-b", "0.0.0.0:8000", "cactusco.wsgi:application"]
