--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ psycopg2-binary>=2.8
 pandas==1.1.5
 django-environ==0.4.5
 google-cloud-storage==1.35.0
+google-cloud-secret-manager==2.3.0
 gcsfs==0.7.1
 xlrd==2.0.1
 openpyxl==3.0.5
