--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,9 @@ oauth2.3==1.5.211
 WooCommerce==3.0.0
 glob2==0.7
 tqdm==4.59.0
-SOAPpy==0.12.22
 pylint-django==2.4.2
 tensorflow==2.3.1
 tensorflow-hub==0.9.0
 absl-py==0.10.0
+beautifulsoup4==4.9.3
+requests==2.25.1
