--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ django-extensions==3.1.1
 django-crispy-forms==1.10.0
 django-rename-app==0.1.2
 psycopg2-binary>=2.8
-pandas==1.1.5
+numpy==1.16.5
+pandas==1.2.3
 django-environ==0.4.5
 google-cloud-storage==1.35.0
 gcsfs==0.7.1
