--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ tensorflow-hub==0.9.0
 absl-py==0.10.0
 beautifulsoup4==4.9.3
 requests==2.25.1
+django-heroku==0.3.1
+django-cryptography==1.0
+zeep==4.0.0
