--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ beautifulsoup4==4.9.3
 requests==2.25.1
 django-heroku==0.3.1
 django-cryptography==1.0
+django-webpack-loader==0.7.0
 zeep==4.0.0
 dj-database-url==0.5.0
 
