--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-hot-loader": "^1.4.4",
     "mini-css-extract-plugin": "^1.4.1",
