--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-hot-loader": "^1.4.4",
+    "material-icons": "^0.6.1",
     "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
