--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ djangorestframework==3.12.2
 django-cors-headers==3.7.0
 django-extensions==3.1.1
 django-crispy-forms==1.10.0
-django-rename-app==0.1.2
 psycopg2-binary>=2.8
 django-environ==0.4.5
-google-cloud-storage==1.35.0
-gcsfs==0.7.1
+numpy==1.18.5
+pandas==1.2.3
+tensorflow-cpu==2.3.1
+tensorflow-hub==0.9.0
+absl-py==0.10.0
 xlrd==2.0.1
 openpyxl==3.0.5
 gunicorn==20.0.4
@@ -28,4 +30,5 @@ django-webpack-loader==0.7.0
 zeep==4.0.0
 dj-database-url==0.5.0
 django-debug-toolbar==3.2
+django-prefetch==1.2.2
 
