--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "style-loader": "^2.0.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.6",
     "webpack": "^4.46.0",
     "webpack-bundle-tracker": "^0.4.3",
     "webpack-merge": "^5.7.3"
