--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config ./landing/demos/webpack.dev.js",
-    "build": "webpack --config ./landing/demos/webpack.prod.js"
+    "build": "ENV=production webpack --config ./landing/demos/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-hot-loader": "^1.4.4",
+    "cwebp": "^2.0.5",
     "material-icons": "^0.6.1",
     "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^4.14.1",
